--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -235,10 +235,20 @@ span.imagespacer{
 .home3img{
   padding: 6px;
 }
-.alignright{
-  text-align: right;
-}
 .oddhomepageitem{
-  background-color: #F4F4F4;
+  background-color: #EBFAFF;
 }
-
+.statsbar{
+  background-image: -moz-linear-gradient(center top , #00AEC4, #00AEC4);
+  color: #FFF;
+  vertical-align: middle;
+  font-size: 10pt;
+  padding-top: 5px;
+}
+.statsnumber{
+  font-size: 26pt;
+}
+.spaceitout{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
