Altered stats bar, other cosmetic changes

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -38,10 +38,15 @@ h1 ASP.NET library and image server
 .home3
   .row.statsbar
     .span3
-      .icons-box
-          i.ico-white.circle-color-full.ico-shield
+      p.statsnumber
+        |99.9%
       p
-        |Take a look at this graph above that shows how awesome we are!
+        |Customer satisfaction rate
+    .span3
+      p.statsnumber
+        |45
+      p
+        |Countries represented in our client base
     .span3
       p.statsnumber
         |95,000+
@@ -49,19 +54,16 @@ h1 ASP.NET library and image server
         |NuGet downloads of ImageResizer
     .span3
       p.statsnumber
-        |45
+        |$5-50
       p
-        |Countries of our clientele
+        |Bounty for finding 
+        em any 
+        |bugs in our code
 
-    .span3
-      p.statsnumber
-        |Things!
-      p
-        |Whatever is above just convinced you to buy our product
         /If there is a way to make this look like the header bar, that would be PERFECT. Also, zebra on the graph and the other content.
 
 .row
-  h1.home3
+  h1.home3.extrapadding
     |What We Do
   .span6
     markdown:
@@ -73,7 +75,8 @@ h1 ASP.NET library and image server
 hr
   .oddhomepageitem
     .row.container.home3
-      h1 Benefits
+      h1.headerpadding
+        | Benefits
     .row
       .span6
         a.block.plaintext href="/docs/benefits/comprehensive"
@@ -112,7 +115,8 @@ hr
           /Get rid of the borders around each of the benefits, and find a way to expand the background color to each side.
 
   .container.home3
-    h1 Don't Believe Us?
+    h1.headerpadding
+      | Don't Believe Us?
     p
       |ImageResizer is trusted by small businesses and Fortune 500 companies alike. We're proud to let our customer satisfaction and our product speak for themselves.
     .row
@@ -144,7 +148,7 @@ hr
             /Also, change the pictures to something pertinent. Zebra.
 container.home3
   .oddhomepageitem
-    h1 
+    h1.headerpadding
       |Explore our Site
     p
       |This is where we put anything else we decide will be on the homepage.
