Added some padding to a few features.

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -243,12 +243,16 @@ span.imagespacer{
   color: #FFF;
   vertical-align: middle;
   font-size: 10pt;
-  padding-top: 5px;
+  padding-top: 15px;
 }
 .statsnumber{
-  font-size: 26pt;
+  font-size: 28pt;
 }
-.spaceitout{
-  padding-top: 20px;
-  padding-bottom: 20px;
+.headerpadding{
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+.extrapadding{
+  padding-top: 25px;
+  padding-bottom: 30px;
 }
