--- a/content/home3.slim
+++ b/content/home3.slim
@@ -13,145 +13,197 @@ h1 ASP.NET library and image server
 
 .container.home3
   .row
-    h1 
-      | Your server can prepare images 5,000 times faster than you
+    h1.sidespace
+      | Your server can prepare images 5,000 times faster than you.
     .row
       .container.home3img
-        img src="http://z.zr.io/ri/3s.jpg?height=200"
+        img src="http://z.zr.io/ri/fix/12s.jpg?height=200"
     .row
       code
         | &lt;img src="img.jpg?height=200" />
 
 
-  h2 
-    | Add commands to image URLs to get altered versions in milliseconds. 
-    em Save for Web
-    |  is dead; welcome to the cutting edge.
-  /Find some way to contain the text within certain parameters.
+    h2.sidespace 
+      | Add commands to image URLs to get altered versions in milliseconds. 
+      em Save for Web
+      |  is dead; welcome to the cutting edge.
 
-  .row
-    .span12.home3img
-      a href="download" class="btn btn-primary"
+    .row.home3img
+      a href="download" class="btn btn-buynow"
         | Download
       /This button needs to be bigger
 
-.home3
-  .row.statsbar
-    .span3
-      p.statsnumber
-        |99.9%
-      p
-        |Customer satisfaction rate
-    .span3
-      p.statsnumber
-        |45
-      p
-        |Countries represented in our client base
-    .span3
-      p.statsnumber
-        |95,000+
-      p
-        |NuGet downloads of ImageResizer
-    .span3
-      p.statsnumber
-        |$5-50
-      p
-        |Bounty for finding 
-        em any 
-        |bugs in our code
+.home3.statsbar.row-fluid
+  .span3
+    p.statsnumber
+      |99.9%
+    p
+      |Customer satisfaction rate
+  .span3
+    p.statsnumber
+      |45
+    p
+      |Countries represented in our client base
+  .span3
+    p.statsnumber
+      |95,000+
+    p
+      |NuGet downloads of ImageResizer
+  .span3
+    p.statsnumber
+      |$5-50
+    p.rightside
+      |Bounty for
+      em any 
+      |bugs in our code
 
-        /If there is a way to make this look like the header bar, that would be PERFECT. Also, zebra on the graph and the other content.
+    /If there is a way to make this look like the header bar, that would be PERFECT. Also, zebra on the graph and the other content.
 
-.row
+.row-fluid
   h1.home3.extrapadding
     |What We Do
-  .span6
-    markdown:
-      ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds. **Video will go to the right of this paragraph. Current video is a placeholder, to help figure out size.**
-    /Remove last sentence eventually, and replace side-video with the actual video. Zebra.
-  .span6.home3
-    iframe frameborder="0" height="189" src="//www.youtube.com/embed/FirWP0U3QMY" width="300"
+  .container
+    .span6
+      p.sidespace
+        |ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds. **Video will go to the right of this paragraph. Current video is a placeholder, to help figure out size.**
+      p.sidespace
+        |Here's a 
+        a href="/docs/basics" review of basic commands
+        | and here's a 
+        a href="/docs/benefits/comprehensive" more comprehensive rundown with advanced features
+        |.
+      /Remove last sentence eventually, and replace side-video with the actual video. Zebra.
+    .span4.home3
+      iframe frameborder="0" height="189" src="//www.youtube.com/embed/FirWP0U3QMY" width="300"
 
 hr
   .oddhomepageitem
-    .row.container.home3
-      h1.headerpadding
-        | Benefits
-    .row
-      .span6
-        a.block.plaintext href="/docs/benefits/comprehensive"
-          .icons-box
-            i.ico-white.circle-color-full.ico-tint
-            h3 All the Editing Tools for Your Business Needs
-            markdown:
-              Crop, resize, remove red-eye, add overlays, trim whitespace, feather edges… ImageResizer has numerous capabilities to free you from the photoshop-upload-test cycle so you can get back to work. See what ImageResizer can do for your business. 
-            .clear
-      .span6
-        a.block.plaintext href=""
-          .icons-box
-            i.ico-white.circle-color-full.ico-cup
-            h3 Agile, Compatible, Standardized
-            markdown:
-              ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your user volume, your platform. (link) See how ImageResizer can connect with your business.
-            .clear
-            /The above link will go to a new page, that has, info about/links to /docs/workswith, /docs/benefits/performant, and /plugins. Zebra.
-    .row
-      .span6
-        a.block.plaintext href="/docs/benefits/stable"
-          .icons-box
-            i.ico-white.circle-color-full.ico-shield
-            h3 Secure and Stable
-            markdown:
-              Secure by default, ImageResizer protects against DDOS and XSS attacks, and minimizes attack surface with a plugin model. Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day one.
-            .clear
-      .span6
-        a.block.plaintext href=""
-          .icons-box
-            i.ico-white.circle-color-full.ico-group
-            h3 Open Source
-            markdown:
-              Core functionality is free and open source under the [Freedom license](/licenses/freedom). Everything we offer includes source code and permits modification. **We reward pull requests**.
-            .clear
-          /Get rid of the borders around each of the benefits, and find a way to expand the background color to each side.
+    .row-fluid.container.home3
+      .row
+        h1.headerpadding
+          | Benefits
+      .row-fluid
+        .span6
+          a.block.plaintext href="/docs/benefits/comprehensive"
+            .icons-box
+              i.ico-white.circle-color-full.ico-tint
+              h3 All the Editing Tools for Your Business Needs
+              p.sidespace
+                |Crop, resize, remove red-eye, add overlays, trim whitespace, feather edges… ImageResizer has numerous capabilities to free you from the photoshop-upload-test cycle so you can get back to work. See what ImageResizer can do for your business. 
+              .clear
+        .span6
+          a.block.plaintext href=""
+            .icons-box
+              i.ico-white.circle-color-full.ico-cup
+              h3 Agile, Compatible, Standardized
+              p.sidespace
+                |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your user volume, your platform. (link) See how ImageResizer can connect with your business.
+              .clear
+              /The above link will go to a new page, that has, info about/links to /docs/workswith, /docs/benefits/performant, and /plugins. Zebra.
+      .row-fluid
+        .span6
+          a.block.plaintext href="/docs/benefits/stable"
+            .icons-box
+              i.ico-white.circle-color-full.ico-shield
+              h3 Secure and Stable
+              p.sidespace
+                |Secure by default, ImageResizer protects against DDOS and XSS attacks, and minimizes attack surface with a plugin model. Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day one.
+              .clear
+        .span6
+          a.block.plaintext href=""
+            .icons-box
+              i.ico-white.circle-color-full.ico-group
+              h3 Open Source
+              p.sidespace
+                |Core functionality is free and open source under the [Freedom license](/licenses/freedom). Everything we offer includes source code and permits modification. **We reward pull requests**.
+              .clear
+            /Get rid of the borders around each of the benefits, and find a way to expand the background color to each side.
 
   .container.home3
     h1.headerpadding
       | Don't Believe Us?
-    p
+    p.sidespace
       |ImageResizer is trusted by small businesses and Fortune 500 companies alike. We're proud to let our customer satisfaction and our product speak for themselves.
     .row
       .span3
-        a.block.plaintext href="/docs/benefits/customers"
+        a.block.plaintext.color href="/docs/benefits/customers"
           img src="http://z.zr.io/ri/3s.jpg?height=200"
             h3 In the Field
-            markdown:
-              Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
+            p.sidespace
+              |Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
+            /Make a compilation picture of varous homepages zebra
       .span3
-        a.block.plaintext href="/docs/benefits/testimonials"
+        a.block.plaintext.color href="/docs/benefits/testimonials"
           img src="http://z.zr.io/ri/3s.jpg?height=200"
             h3 Testimonials
-            markdown:
-              We don't like to toot our own horn. Fortunately, we have plenty of customers who'll do it for us. See what they're saying.
+            p.sidespace
+              |We don't like to toot our own horn. Fortunately, we have plenty of customers who'll do it for us. See what they're saying.
+            /Like icon, 5 stars, fork banner/icon if there is one, giant quotation mark/s, retweet icon maybe?
       .span3
-        a.block.plaintext href="/docs/community"
+        a.block.plaintext.color href="/docs/community"
           img src="http://z.zr.io/ri/3s.jpg?height=200"
             h3 Community
-            markdown:
-              We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
+            p.sidespace
+              |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
+            /Stock photo of "community?"
       .span3
-        a.block.plaintext href="/docs/community"
+        a.block.plaintext.color href="/docs/community"
           img src="http://z.zr.io/ri/3s.jpg?height=200"
             h3 Tutorials
-            markdown:
-              Either watch a screencast or read a page to see ImageResizer in action.
+            p.sidespace
+              |Either watch a screencast or read a page to see ImageResizer in action.
             /This will have to link to something new. Zebra.
+            /Maybe Nathanael's mug? Picture of a screencast? Someone giving a presentation?
             /Also, change the pictures to something pertinent. Zebra.
-container.home3
-  .oddhomepageitem
-    h1.headerpadding
-      |Explore our Site
-    p
-      |This is where we put anything else we decide will be on the homepage.
+  container
+    .oddhomepageitem
+      h1.headerpadding.home3
+        |Explore Our Site
+      .row-fluid.bottompadding
+        .span1
+        .span4
+          h2.sidespace
+            |Support Contracts
+          p.sidespace
+            |Need someone to call when everything breaks at 6 P.M. on Friday? We offer a variety of support contracts designed to meet every business's need, from architecture planning to hotfixes to the friendliest "try turning it off and turning it on again" in the industry.
+          .home3
+            a href="/support/contracts" class="btn btn-primary"
+              | Support Contracts Page
+            /might want to take that last bit out. zebra
+        .span2
+        .span4
+          h2.sidespace
+            |Meet the Staff
+          p.sidespace
+            |The same small size that ensures personalized service for all of our clients also lets us to show you literally everyone in our company on one webpage. Come and see who'll answer that email you just sent our way.
+          .home3
+            a href="" class="btn btn-primary"
+              | Staff Page
+            /We need to make a staff page zebra.
+        .span1
+      .row-fluid.bottompadding
+        .span1
+        .span4
+          h2.sidespace
+            |We're on Github
+          p.sidespace
+            |ImageResizing isn't all we do. Want to see some of our other projects, image-related and otherwise?
+          .home3
+            a href="https://github.com/imazen/" class="btn btn-primary"
+              | Imazen on Github
+        .span2
+        .span4
+          h2.sidespace
+            |We Blog Too!
+          p.sidespace
+            |Content ranges from measured, friendly tips about using our product (that's Nathanael) to whining about neglected Netflix queues (that would be Liz), but there's plenty of information we like to squeeze in here that can't fit on our website.
+          .home3
+            a href="blog" class="btn btn-primary"
+              | Blog
+        .span1
+        
+
+    /Ideas: Meet The Staff, Check out our support contracts, Here's our blog, We're on Github, search bar
     /Zebra
 
-  /What I need to learn how to do: 1) Expand background colors and color bars to the edge of the page. 2) Put in different images. 3) Get the "Don't Believe Us?" section stuff to highlight as you hover over, and contain the text underneath the images to the width of the images. 4) Make the stats bar like the header. 5) LEARN HOW TO SPACE STUFF!
+  /What I need to learn how to do: 2) Put in different images. 3) Get the "Don't Believe Us?" section stuff to highlight as you hover over, and contain the text underneath the images to the width of the images. 5) LEARN HOW TO SPACE STUFF!
