Activated some links.

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -87,11 +87,11 @@ hr
                 |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your platform, your software. See how ImageResizer can connect with your business
               .clear
         .span6
-          a.block.plaintext href=""
+          a.block.plaintext href="/docs/benefits/performant"
             .icons-box
               i.ico-white.circle-color-full.ico-stats
               h3 High Performance
-              p.sidespace
+              p.sidespace.home3
                 |Upgrade to the Performance Edition and scale to millions of images and users. We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
               .clear
       .row-fluid
@@ -108,10 +108,8 @@ hr
             .icons-box
               i.ico-white.circle-color-full.ico-group
               h3 Open Source
-              p.sidespace
-                |Core functionality is free and open source under the
-                a href="/licenses/freedom" Freedom license
-                |. Everything we offer includes source code and permits modification. 
+              p.sidespace.home3
+                |Core functionality is free and open source under the freedom license. Everything we offer includes source code and permits modification. 
                 strong We reward pull requests.
               .clear
   .container.home3
