Changed 3 out of the 4 "Don't Believe Us?" photos.

--- a/content/home3.slim
+++ b/content/home3.slim
@@ -120,34 +120,30 @@ hr
     .row
       .span3
         a.block.plaintext.color href="/docs/benefits/customers"
-          img src="http://z.zr.io/ri/3s.jpg?height=200"
-            h3 In the Field
-            p.sidespace
-              |Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
-            /Make a compilation picture of varous homepages zebra
+          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/in-the-field.jpg?width=250"
+          h3 In the Field
+          p
+            |Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
       .span3
         a.block.plaintext.color href="/docs/benefits/testimonials"
-          img src="http://z.zr.io/ri/3s.jpg?height=200"
+          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/testimonials.png?width=250"
             h3 Testimonials
-            p.sidespace
+            p
               |We don't like to toot our own horn. Fortunately, we have plenty of customers who'll do it for us. See what they're saying.
-            /Like icon, 5 stars, fork banner/icon if there is one, giant quotation mark/s, retweet icon maybe?
       .span3
         a.block.plaintext.color href="/docs/community"
-          img src="http://z.zr.io/ri/3s.jpg?height=200"
+          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/cropped-community.jpg?width=250"
             h3 Community
-            p.sidespace
+            p
               |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
-            /Stock photo of "community?"
       .span3
         a.block.plaintext.color href="/docs/community"
           img src="http://z.zr.io/ri/3s.jpg?height=200"
             h3 Tutorials
-            p.sidespace
+            p
               |Either watch a screencast or read a page to see ImageResizer in action.
             /This will have to link to something new. Zebra.
-            /Maybe Nathanael's mug? Picture of a screencast? Someone giving a presentation?
-            /Also, change the pictures to something pertinent. Zebra.
+            /Get a picture of a video pre-watching screen. Zebra.
   container
     .oddhomepageitem
       h1.headerpadding.home3
@@ -190,7 +186,6 @@ hr
               a href="/staff" class="btn btn-primary"
                 | Staff Page
           .span2
-            /We need to make a staff page zebra.
   .container.home3
     h1.headerpadding.home3
       |Other Products from Imazen
